--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,6 @@ version: "3.8"
 services:
   weather-app:
     build: .
-    container_name: weather-gui
-    environment:
-      - DISPLAY=${DISPLAY:-host.docker.internal:0}
-    volumes:
-      - /tmp/.X11-unix:/tmp/.X11-unix
-    stdin_open: true
-    tty: true
+    ports:
+      - "5000:5000"
+    container_name: weather-web
