updated workflow to tag and push image

--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -48,8 +48,8 @@ jobs:
 
     # Optional: Push to GitHub Container Registry
     # Uncomment if you want to push the image
-    # - name: Tag image
-    #   run: docker tag weather-app:latest ghcr.io/${{ github.repository_owner }}/weather-app:latest
+    - name: Tag image
+      run: docker tag weather-app:latest ghcr.io/${{ github.repository_owner }}/weather-app:latest
 
-    # - name: Push image
-    #   run: docker push ghcr.io/${{ github.repository_owner }}/weather-app:latest
+    - name: Push image
+      run: docker push ghcr.io/${{ github.repository_owner }}/weather-app:latest
