--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,30 +1,18 @@
-name: Docker CI
-
-on:
-  push:
-    branches: [ main ]
-
-permissions:
-  contents: read
-  packages: write
-
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build Docker image
-      run: docker build -t ghcr.io/${{ github.repository_owner }}/weather-app:latest .
+      - name: Build image
+        run: docker build -t yourdockerhubusername/weather-app:latest .
 
-    - name: Push Docker image
-      run: docker push ghcr.io/${{ github.repository_owner }}/weather-app:latest
+      - name: Push image
+        run: docker push yourdockerhubusername/weather-app:latest
